@@ -1,24 +1,27 @@
 plugins {
     id 'application'
-    id 'java'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
-}
-
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
-
-group 'askov.schoolprojects.cg.coloris'
-version '1.0'
-
-application {
-    mainClassName = 'askov.schoolprojects.cg.coloris.Coloris'
-}
-
-javafx {
-    version = '19'
-    modules = ['javafx.controls', 'javafx.media']
 }
 
 repositories {
     mavenCentral()
+}
+
+def javaFxVersion = '17.0.8'
+
+dependencies {
+    implementation "org.openjfx:javafx-base:${javaFxVersion}:win"
+    implementation "org.openjfx:javafx-controls:${javaFxVersion}:win"
+    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:win"
+    implementation "org.openjfx:javafx-media:${javaFxVersion}:win"
+}
+
+application {
+    mainClass = 'askov.schoolprojects.cg.coloris.Coloris'
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs = [
+        "--module-path", configurations.runtimeClasspath.asPath,
+        "--add-modules", "javafx.controls,javafx.graphics,javafx.media"
+    ]
 }
